--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Villagra | Cybersecurity & AI Specialist</title>
+    <title>Lucas Villagra | Cybersecurity Specialist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -16,54 +16,61 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { background-color: var(--bg); color: var(--text); font-family: 'Courier New', monospace; line-height: 1.6; }
 
+        /* HEADER AJUSTADO PARA EVITAR CORTE DE TEXTO EN IMAGEN */
         header {
-            height: 70vh;
-            background: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.85)), url('FOTO_PORTADA..jpg');
-            background-size: cover; background-position: center;
+            height: 65vh;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.85)), url('FOTO_PORTADA..jpg');
+            background-size: cover;
+            background-position: center 20%; /* Ajustado para centrar mejor el arte de la imagen */
             display: flex; flex-direction: column; justify-content: center; align-items: center;
-            text-align: center; border-bottom: 3px solid var(--accent);
+            text-align: center; border-bottom: 2px solid var(--accent);
             padding: 20px;
         }
 
-        h1 { font-size: 3.5rem; color: #fff; letter-spacing: 4px; text-transform: uppercase; }
-        .tagline { color: var(--accent); font-weight: bold; margin: 15px 0; font-size: 1.1rem; }
+        h1 { font-size: 3.2rem; color: #fff; letter-spacing: 5px; text-shadow: 2px 2px 10px #000; }
+        .tagline { color: var(--accent); font-weight: bold; margin: 10px 0; font-size: 1.1rem; background: rgba(0,0,0,0.5); padding: 5px 15px; }
 
-        section { padding: 60px 20px; max-width: 1100px; margin: auto; }
-        h2 { border-left: 5px solid var(--accent); padding-left: 20px; color: #fff; text-transform: uppercase; margin-bottom: 30px; }
+        section { padding: 50px 20px; max-width: 1000px; margin: auto; }
+        h2 { border-left: 4px solid var(--accent); padding-left: 15px; color: #fff; text-transform: uppercase; margin-bottom: 30px; }
 
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; }
-        .card { background: var(--card-bg); border: 1px solid var(--border); padding: 30px; border-radius: 12px; transition: 0.3s; }
-        .card:hover { border-color: var(--accent); transform: translateY(-5px); }
-        .card h3 { color: var(--accent); margin-bottom: 15px; }
-
-        /* STACK TECNOLÓGICO VISUAL */
-        .stack-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 40px;
+        /* STACK TECNOLÓGICO */
+        .stack-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
             text-align: center;
             margin-top: 20px;
         }
-        .stack-item { transition: 0.3s; }
-        .stack-item:hover { color: #fff; transform: scale(1.1); }
-        .stack-item i { font-size: 3rem; color: var(--accent); display: block; margin-bottom: 10px; }
-        .stack-item span { font-weight: bold; font-size: 0.9rem; }
+        .stack-item {
+            background: var(--card-bg);
+            padding: 20px;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            transition: 0.3s;
+        }
+        .stack-item:hover { border-color: var(--accent); transform: scale(1.05); }
+        .stack-item i { font-size: 2.5rem; color: var(--accent); margin-bottom: 10px; display: block; }
+        .stack-item span { font-size: 0.8rem; font-weight: bold; letter-spacing: 1px; }
+
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
+        .card { background: var(--card-bg); border: 1px solid var(--border); padding: 25px; border-radius: 8px; transition: 0.3s; }
+        .card:hover { border-color: var(--accent); }
+        .card h3 { color: var(--accent); margin-bottom: 10px; }
 
         .btn {
             display: inline-block;
             margin-top: 15px;
-            padding: 12px 24px;
+            padding: 10px 20px;
             border: 1px solid var(--accent);
             color: var(--accent);
             text-decoration: none;
             font-weight: bold;
+            font-size: 0.85rem;
             transition: 0.3s;
-            cursor: pointer;
         }
         .btn:hover { background: var(--accent); color: #000; box-shadow: 0 0 15px var(--accent); }
 
-        footer { text-align: center; padding: 50px; border-top: 1px solid var(--border); font-size: 0.8rem; }
+        footer { text-align: center; padding: 40px; border-top: 1px solid var(--border); font-size: 0.8rem; color: #6e7681; }
     </style>
 </head>
 <body>
@@ -76,12 +83,12 @@
 
 <section id="stack">
     <h2>./stack_tecnológico</h2>
-    <div class="stack-grid">
+    <div class="stack-container">
         <div class="stack-item"><i class="fab fa-python"></i><span>PYTHON</span></div>
         <div class="stack-item"><i class="fab fa-linux"></i><span>LINUX</span></div>
         <div class="stack-item"><i class="fas fa-database"></i><span>SQL</span></div>
-        <div class="stack-item"><i class="fas fa-shield-halved"></i><span>SIEM/IDS</span></div>
-        <div class="stack-item"><i class="fas fa-robot"></i><span>AI PROMPTING</span></div>
+        <div class="stack-item"><i class="fas fa-shield-virus"></i><span>SIEM/IDS</span></div>
+        <div class="stack-item"><i class="fas fa-microchip"></i><span>GEN AI</span></div>
     </div>
 </section>
 
@@ -89,37 +96,39 @@
     <h2>./servicios_profesionales</h2>
     <div class="grid">
         <div class="card">
-            <h3>Auditoría de Sistemas</h3>
-            <p>Hardening de entornos y análisis de vulnerabilidades críticas en infraestructuras locales y nube.</p>
+            <h3>Auditoría & Hardening</h3>
+            <p>Protección de activos mediante el endurecimiento de sistemas y análisis de riesgos configuracionales.</p>
         </div>
         <div class="card">
             <h3>Pruebas de Penetración</h3>
-            <p>Simulación de ataques reales (Red Team) para validar la resiliencia de los activos digitales.</p>
+            <p>Identificación proactiva de brechas de seguridad simulando tácticas de adversarios reales.</p>
         </div>
     </div>
 </section>
 
 <section id="certificaciones">
-    <h2>./certificaciones_validadas</h2>
+    <h2>./certificaciones_google</h2>
     <div class="grid">
         <div class="card">
             <h3>Google Cybersecurity</h3>
-            <p>9 cursos completados: Redes, Python, Linux, SQL y Detección de Amenazas.</p>
-            <a href="Cybersecutity Analist.pdf" target="_blank" class="btn">VER CREDENCIAL PDF</a>
+            <p>Especialista en detección y respuesta, redes y automatización con Python.</p>
+            <a href="Cybersecutity Analist.pdf" target="_blank" class="btn">DESCARGAR PDF</a>
         </div>
         <div class="card">
             <h3>Google AI Essentials</h3>
-            <p>5 cursos completados: Uso responsable de IA y productividad avanzada.</p>
-            <a href="Google AI Essentials.pdf" target="_blank" class="btn">VER CREDENCIAL PDF</a>
+            <p>Dominio de IA generativa para maximizar la productividad en flujos de trabajo de seguridad.</p>
+            <a href="Google AI Essentials.pdf" target="_blank" class="btn">DESCARGAR PDF</a>
         </div>
     </div>
 </section>
 
 <section id="contacto" style="text-align: center;">
     <h2>./conectar</h2>
-    <a href="https://www.linkedin.com/in/lucas-villagra-9b5097147/" class="btn" target="_blank">LINKEDIN</a>
-    <a href="https://wa.me/543814764474" class="btn" target="_blank">WHATSAPP</a>
-    <a href="mailto:lucaslean1806@gmail.com" class="btn">EMAIL</a>
+    <div style="margin-top: 20px;">
+        <a href="https://www.linkedin.com/in/lucas-villagra-9b5097147/" class="btn" target="_blank">LINKEDIN</a>
+        <a href="https://wa.me/543814764474" class="btn" target="_blank">WHATSAPP</a>
+        <a href="mailto:lucaslean1806@gmail.com" class="btn">EMAIL</a>
+    </div>
 </section>
 
 <footer>
