--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <title>Lucas Villagra | Cybersecurity Specialist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root {
-            --bg: #0d1117;
-            --card-bg: #161b22;
-            --accent: #00ff41;
-            --text: #c9d1d9;
-            --border: #30363d;
+/* HEADER REFINADO - AJUSTE DE BORDES PRECISOS */
+        header {
+            height: 60vh; /* Altura equilibrada */
+            background: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.85)), url('FOTO_PORTADA..jpg');
+            background-size: cover;
+            background-position: center; /* Vuelve al centro para coincidir bordes */
+            background-repeat: no-repeat;
+            display: flex; 
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center;
+            text-align: center; 
+            border-bottom: 3px solid var(--accent);
+            padding: 20px;
+            width: 100%; /* Asegura que cubra todo el ancho */
         }
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { background-color: var(--bg); color: var(--text); font-family: 'Courier New', monospace; line-height: 1.6; }
@@ -21,7 +30,7 @@
             height: 65vh;
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.85)), url('FOTO_PORTADA..jpg');
             background-size: cover;
-            background-position: center 20%; /* Ajustado para centrar mejor el arte de la imagen */
+            background-position: center 70%; /* Ajustado para centrar mejor el arte de la imagen */
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             text-align: center; border-bottom: 2px solid var(--accent);
             padding: 20px;
