--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Villagra | Cybersecurity Analyst & Red Team</title>
+    <title>Lucas Villagra | Cybersecurity Specialist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --bg: #0d1117;
-            --card-bg: #161b22;
-            --accent: #00ff41;
-            --text: #c9d1d9;
-            --border: #30363d;
+            --bg: #000000; /* Negro Puro (Ósculo) */
+            --card-bg: #0a0a0a; 
+            --accent: #00ff41; /* Verde Matrix */
+            --text: #e0e0e0;
+            --border: #1a1a1a;
         }
         
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -24,31 +24,56 @@
             overflow-x: hidden;
         }
 
-        /* --- PORTADA REVISADA (AJUSTE DE BORDES) --- */
+        /* --- PORTADA CORREGIDA (FULL WIDTH & CONTRASTE) --- */
         header {
-            height: 60vh;
+            height: 65vh;
             width: 100%;
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.85)), url('FOTO_PORTADA..jpg');
+            /* Overlay más oscuro para resaltar el texto */
+            background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('FOTO_PORTADA..jpg');
             background-size: cover;
-            background-position: center center;
+            background-position: center;
             background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
-            border-bottom: 3px solid var(--accent);
+            border-bottom: 2px solid var(--accent);
             padding: 20px;
         }
 
-        h1 { font-size: 3.5rem; color: #fff; letter-spacing: 5px; text-transform: uppercase; text-shadow: 2px 2px 10px #000; }
-        .tagline { color: var(--accent); font-weight: bold; margin: 15px 0; font-size: 1.1rem; letter-spacing: 1px; }
-        .location { font-size: 0.9rem; color: #8b949e; }
+        h1 { 
+            font-size: 3.5rem; 
+            color: #ffffff; 
+            letter-spacing: 6px; 
+            text-transform: uppercase; 
+            text-shadow: 0 0 20px rgba(0, 255, 65, 0.3); 
+        }
 
-        section { padding: 60px 20px; max-width: 1100px; margin: auto; }
-        h2 { border-left: 5px solid var(--accent); padding-left: 20px; color: #fff; text-transform: uppercase; margin-bottom: 35px; font-size: 1.6rem; }
+        .tagline { 
+            color: var(--accent); 
+            font-weight: bold; 
+            margin: 15px 0; 
+            font-size: 1.2rem; 
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
 
-        /* --- STACK TECNOLÓGICO --- */
+        .location { font-size: 0.9rem; color: #666; }
+
+        section { padding: 80px 20px; max-width: 1100px; margin: auto; }
+        
+        h2 { 
+            border-left: 4px solid var(--accent); 
+            padding-left: 20px; 
+            color: #ffffff; 
+            text-transform: uppercase; 
+            margin-bottom: 40px; 
+            font-size: 1.8rem;
+            letter-spacing: 3px;
+        }
+
+        /* --- STACK TECNOLÓGICO MEJORADO --- */
         .stack-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
@@ -58,48 +83,64 @@
         }
         .stack-item {
             background: var(--card-bg);
-            padding: 20px;
+            padding: 25px;
             border: 1px solid var(--border);
-            border-radius: 12px;
-            transition: 0.3s ease;
+            border-radius: 4px;
+            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
-        .stack-item:hover { border-color: var(--accent); transform: translateY(-5px); }
-        .stack-item i { font-size: 2.5rem; color: var(--accent); margin-bottom: 10px; display: block; }
-        .stack-item span { font-size: 0.8rem; font-weight: bold; }
+        .stack-item:hover { 
+            border-color: var(--accent); 
+            transform: translateY(-10px);
+            box-shadow: 0 0 15px rgba(0, 255, 65, 0.2);
+        }
+        .stack-item i { font-size: 2.8rem; color: var(--accent); margin-bottom: 12px; display: block; }
+        .stack-item span { font-size: 0.85rem; font-weight: bold; color: #fff; }
 
         /* --- GRIDS DE CONTENIDO --- */
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 25px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 30px; }
         .card { 
             background: var(--card-bg); 
             border: 1px solid var(--border); 
-            padding: 30px; 
-            border-radius: 12px; 
+            padding: 35px; 
+            border-radius: 4px; 
             transition: 0.3s ease; 
         }
-        .card:hover { border-color: var(--accent); }
-        .card h3 { color: var(--accent); margin-bottom: 15px; font-size: 1.3rem; }
+        .card:hover { border-color: var(--accent); background: #050505; }
+        .card h3 { color: var(--accent); margin-bottom: 15px; font-size: 1.4rem; }
 
-        /* --- BOTONES --- */
+        /* --- BOTONES ESTILO TERMINAL --- */
         .btn {
             display: inline-block;
-            margin-top: 15px;
-            padding: 12px 24px;
+            margin-top: 20px;
+            padding: 14px 28px;
             border: 1px solid var(--accent);
             color: var(--accent);
             text-decoration: none;
             font-weight: bold;
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             text-transform: uppercase;
             transition: 0.3s;
-            cursor: pointer;
+            background: transparent;
         }
-        .btn:hover { background: var(--accent); color: #000; box-shadow: 0 0 15px var(--accent); }
+        .btn:hover { 
+            background: var(--accent); 
+            color: #000; 
+            box-shadow: 0 0 25px var(--accent); 
+        }
 
-        footer { text-align: center; padding: 50px; border-top: 1px solid var(--border); font-size: 0.8rem; color: #6e7681; }
+        footer { 
+            text-align: center; 
+            padding: 60px; 
+            border-top: 1px solid var(--border); 
+            font-size: 0.8rem; 
+            color: #444; 
+            letter-spacing: 1px;
+        }
 
         @media (max-width: 768px) {
-            h1 { font-size: 2.3rem; }
-            header { height: 50vh; }
+            h1 { font-size: 2.2rem; }
+            header { height: 55vh; }
+            section { padding: 40px 20px; }
         }
     </style>
 </head>
@@ -124,45 +165,45 @@
 
 <section id="about">
     <h2>./whoami</h2>
-    <p style="font-size: 1.1rem; max-width: 850px;">
+    <p style="font-size: 1.15rem; max-width: 900px; color: #bbb;">
         Analista de ciberseguridad especializado en operaciones de Red Team y protección de infraestructuras críticas. 
-        Certificado por Google, combino la auditoría técnica rigurosa con la automatización en Python y el uso estratégico de IA para neutralizar amenazas proactivamente.
+        Certificado por Google, fusiono la auditoría técnica con la automatización proactiva para blindar activos digitales contra amenazas avanzadas.
     </p>
 </section>
 
 <section id="servicios">
-    <h2>./servicios_profesionales</h2>
+    <h2>./servicios</h2>
     <div class="grid">
         <div class="card">
             <h3>Auditoría & Hardening</h3>
-            <p>Análisis de superficies de ataque y endurecimiento de sistemas Linux/Windows para minimizar vectores de compromiso.</p>
+            <p>Fortalecimiento de sistemas operativos y redes mediante el cierre de vectores de ataque y políticas de seguridad robustas.</p>
         </div>
         <div class="card">
             <h3>Pentesting (Red Team)</h3>
-            <p>Ejecución de simulaciones de adversarios reales para identificar y reportar vulnerabilidades críticas en redes corporativas.</p>
+            <p>Simulación de intrusiones reales para identificar brechas de seguridad antes de que sean explotadas por actores maliciosos.</p>
         </div>
     </div>
 </section>
 
 <section id="certificaciones">
-    <h2>./certificaciones_google</h2>
+    <h2>./certificaciones</h2>
     <div class="grid">
         <div class="card">
             <h3>Google Cybersecurity</h3>
-            <p>Formación integral en redes, SIEM (Chronicle), IDS (Suricata) y respuesta ante incidentes.</p>
-            <a href="Cybersecutity Analist.pdf" target="_blank" class="btn">VER CREDENCIAL</a>
+            <p>Especialización en redes, Python, Linux, SQL y herramientas SIEM como Splunk y Chronicle.</p>
+            <a href="Cybersecutity Analist.pdf" target="_blank" class="btn">VER CREDENCIAL PDF</a>
         </div>
         <div class="card">
             <h3>Google AI Essentials</h3>
-            <p>Especialización en Prompt Engineering y productividad aplicada a entornos de seguridad defensiva.</p>
-            <a href="Google AI Essentials.pdf" target="_blank" class="btn">VER CREDENCIAL</a>
+            <p>Dominio de IA Generativa y Prompt Engineering para optimizar la respuesta ante incidentes y productividad.</p>
+            <a href="Google AI Essentials.pdf" target="_blank" class="btn">VER CREDENCIAL PDF</a>
         </div>
     </div>
 </section>
 
 <section id="contacto" style="text-align: center;">
-    <h2>./conectar_con_el_analista</h2>
-    <div style="margin-top: 20px;">
+    <h2>./conectar</h2>
+    <div style="margin-top: 30px;">
         <a href="https://www.linkedin.com/in/lucas-villagra-9b5097147/" class="btn" target="_blank">LINKEDIN</a>
         <a href="https://wa.me/543814764474" class="btn" target="_blank">WHATSAPP</a>
         <a href="mailto:lucaslean1806@gmail.com" class="btn">EMAIL</a>
@@ -170,7 +211,7 @@
 </section>
 
 <footer>
-    <p>© 2026 Lucas Villagra. System Secured. | Built on GitHub Pages</p>
+    <p>© 2026 Lucas Villagra. STATUS: SYSTEM SECURED | HOSTED ON GITHUB PAGES</p>
 </footer>
 
 </body>
