Fix typo in background image URL

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
             /* SINTAXIS ROBUSTA PARA ASEGURAR CARGA DE IMAGEN */
             /* Degradado más suave (0.5 a 0.8) para que SE VEA la foto */
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.8)), url('FOTO_PORTADA.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.8)), url('FOTO_PORTADA..jpg');
             
             /* Centrado perfecto */
             background-size: cover;
