Update text in about section and project details

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <h2>./ Who Am I</h2>
     <p style="font-size: 1.1rem; max-width: 900px; color: #ccc;">
         Analista de ciberseguridad con enfoque en operaciones de <strong>Red Team</strong> y defensa de infraestructuras críticas. 
-        Combino la auditoría técnica rigurosa con la automatización de procesos mediante IA y Python para blindar activos digitales.
+        Combino la auditoría técnica rigurosa con la automatización de procesos mediante n8n, IA y Python para blindar activos digitales.
     </p>
 </section>
 
@@ -242,7 +242,7 @@
         
         <div class="card">
             <h3><i class="fas fa-wifi"></i> Auditoría Wireless</h3>
-            <p>Análisis de espectro y monitoreo en entorno real con hardware Alfa/MediaTek.</p>
+            <p>Análisis de espectro y monitoreo en entorno real con hardware avanzado Antena Alfa AWUS036ACS para Ciberseguridad.</p>
             
             <div class="terminal-window">
                 <div class="terminal-header">
